<feat>(all):modifs_visuels

--- a/AP1-GP2-PhoTographe/templates/registration/register.html.twig
+++ b/AP1-GP2-PhoTographe/templates/registration/register.html.twig
@@ -75,11 +75,10 @@
 
 			<div class="input-box">
 				<div class="input-field" minlength="12">
-					{{ form_row(registrationForm.plainPassword, {label: 'Password'}) }}
+					{{ form_row(registrationForm.plainPassword) }}
 					<i class='bx bxs-lock-alt'></i>
 				</div>
 				<div class="input-field">
-					<input type="password" placeholder="Confirmation Mot de Passe" required>
 					<i class='bx bxs-lock-alt'></i>
 				</div>
 			</div>
