--- a/AP1-GP2-PhoTographe/templates/base.html.twig
+++ b/AP1-GP2-PhoTographe/templates/base.html.twig
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>
-			{% block title %}Bienvenue
+			{% block title %}Welcome!
 			{% endblock %}
 		</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0"> {% block stylesheets %}{% endblock %}{% block javascripts %}{% endblock %}
+		<link rel="icon" href="assets/images/cameraicon.png"> {% block stylesheets %}{% endblock %}{% block javascripts %}{% endblock %}
 		</head>
 		<body>
 			{% block body %}{% endblock %}
