<feat>(ReadMe):commencement

--- a/AP1-GP2-PhoTographe/templates/c_principal/index.html.twig
+++ b/AP1-GP2-PhoTographe/templates/c_principal/index.html.twig
@@ -5,4 +5,10 @@
 
 {% block body %}
 	<p>Accueil</p>
-{% endblock %}
+
+
+	<button>
+		<a href="/connexion">Se connecter</button>
+		<button>
+			<a href="/inscription">Créer un compte</button>
+		{% endblock %}
