--- a/AP1-GP2-PhoTographe/public/assets/css/style_accueil.css
+++ b/AP1-GP2-PhoTographe/public/assets/css/style_accueil.css
@@ -11,11 +11,7 @@
 
 }
 
-.accueil-login {
-    display: grid;
-    grid-template-rows: min-content 1fr min-content;
 
-}
 
 .nav-items {
     list-style: none;
@@ -28,7 +24,7 @@
 }
 .nav-items a {
     color: #fff; 
-    font-size: 2rem;
+    font-size: 20px;
     text-decoration: none;
 }
 
@@ -54,6 +50,21 @@ nav {
 
 
 
-btn-login {
+.btn-login {
     color: #000;
 }
+
+.grid-presentation {
+    background-color: rgba(255, 255, 255,0.2);
+}
+
+.grid-content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.grid-nav {
+    grid-row-start: 1; /* Commence à la première ligne */
+    grid-row-end: 3; /* Se termine à la deuxième ligne (exclus) */
+}
+
