--- a/AP1-GP2-PhoTographe/public/assets/css/style_login.css
+++ b/AP1-GP2-PhoTographe/public/assets/css/style_login.css
@@ -51,6 +51,7 @@ body {
     font-size: 16px;
     color: #fff;
     padding: 20px 45px 20px 40px;
+    background-color: rgba(255, 255, 255, 0.4)
 }
 
 .input_box input::placeholder{
