<feat>  Delete entity

--- a/AP1-GP2-PhoTographe/templates/presentations/index.html.twig
+++ b/AP1-GP2-PhoTographe/templates/presentations/index.html.twig
@@ -5,6 +5,13 @@
 
 {% block body %}
 <body>
+
+<ul>
+  {% for presentations in presentations %}
+    <li style="color:#fff">{{ presentations.libellePresentation}}</li>
+  {% endfor %}
+</ul>
+
     <div class="header">
         <h1>Présentation d'Alex, Photographe Passionné</h1>
     </div>
