<feat>(deuxième_champ_mdp):commencement changement

--- a/AP1-GP2-PhoTographe/templates/registration/register.html.twig
+++ b/AP1-GP2-PhoTographe/templates/registration/register.html.twig
@@ -78,7 +78,8 @@
 					{{ form_row(registrationForm.plainPassword) }}
 					<i class='bx bxs-lock-alt'></i>
 				</div>
-				<div class="input-field">
+				<div class="input-field" minlength="12">
+					{{ form_row(registrationForm.plainPassword) }}
 					<i class='bx bxs-lock-alt'></i>
 				</div>
 			</div>
