--- a/AP1-GP2-PhoTographe/public/assets/css/style_register.css
+++ b/AP1-GP2-PhoTographe/public/assets/css/style_register.css
@@ -117,4 +117,10 @@ body {
     font-size: 15px;
 }
 
+.form-error {
+    color: red;
+    font-size: 14px;
+    /* Autres styles d'erreur */
+}
+
 
