--- a/AP1-GP2-PhoTographe/templates/base.html.twig
+++ b/AP1-GP2-PhoTographe/templates/base.html.twig
@@ -1,46 +1,52 @@
 {# Template HTML de base relatif a tout les templates #}
 <!DOCTYPE html>
 <html>
-	<head> {# Partie en-tête des templates #}
+	<head>
+		{# Partie en-tête des templates #}
+		<link href="assets/css/style_avis.css" rel="stylesheet">
+		<link href="assets/css/style_contact.css" rel="stylesheet">
 		<meta charset="UTF-8">
 		<title>
-			{% block title %}AlexCaptures #1 | photographe{% endblock %}
+			{% block title %}AlexCaptures #1 | photographe
+			{% endblock %}
 		</title>
 		{% block initCSS %}
-		<link rel="stylesheet" href="/assets/css/style_reset.css">
+			<link rel="stylesheet" href="/assets/css/style_reset.css">
 		{% endblock %}
 		{% block stylesheets %}
-		{# fichiers styles CSS à ajouter #}
+			{# fichiers styles CSS à ajouter #}
 		{% endblock %}
 		{% block headerFooter %}
 			{#  Styles du Header et du pieds de page de tout nos templates #}
-			<link rel="stylesheet" href="/assets/css/style_header.css"> 
+			<link rel="stylesheet" href="/assets/css/style_header.css">
 			<link rel="stylesheet" href="/assets/css/style_footer.css">
 		{% endblock %}
-		{% block icon %}
-		{# icon de tout les templates #}
-		 {# <link rel="icon" href="assets/images/cameraicon.png">  #}
+		{% block icon %}{# icon de tout les templates #}
+			{# <link rel="icon" href="assets/images/cameraicon.png">  #}
 		{% endblock %}
 		{% block javascripts %}
-		{# Script JavaScript #}
+			{# Script JavaScript #}
 		{% endblock %}
 	</head>
-	<body class="body"> {# -- Corps de page des templates -- #}
+	<body
+		class="body">
+		{# -- Corps de page des templates -- #}
 		<header>
-		{# header relatif a tout nos templates #}
-		{% block header %}
-			{# inclusion du Header #}
-			{% include 'partials/_header.html.twig' %}
-		{% endblock %}
+			{# header relatif a tout nos templates #}
+			{% block header %}
+				{# inclusion du Header #}
+				{% include 'partials/_header.html.twig' %}
+			{% endblock %}
 		</header>
 		{% block body %}{# contenu de la page #}{% endblock %}
-	<footer class="footer">
-		{# footer relatif a tout nos templates #}
-		{% block footer %}
-			{# inclusion du pieds de page #}
-			{% include 'partials/_footer.html.twig' %}
-		{% endblock %}
-	</footer>
+		<footer
+			class="footer">
+			{# footer relatif a tout nos templates #}
+			{% block footer %}
+				{# inclusion du pieds de page #}
+				{% include 'partials/_footer.html.twig' %}
+			{% endblock %}
+		</footer>
 	</body>
 
 </html>
