<feat>(tout sauf la page admin)

--- a/AP1-GP2-PhoTographe/templates/page_contact/index.html.twig
+++ b/AP1-GP2-PhoTographe/templates/page_contact/index.html.twig
@@ -30,7 +30,7 @@
 				<div
 					class="contact-infosa">
 					{#<input class="input-email" name="{{ field_name(form.dateDemande) }}" type="text" placeholder="E-mail..." required>#}
-					<input class="input-objet" name="{{ field_name(form.objetDemande) }}" type="text" placeholder="Objet..." required>
+					<input class="input-objet" name="{{ field_name(form.objet) }}" type="text" placeholder="Objet..." required>
 				</div>
 				<div class="contact-infosb">{#<input class="input-telephone" name="{{ field_name(form.enfant) }}" type="text" placeholder="Telephone..." required>#}
 					{#<input class="input-nom" name="{{ field_name(form.idDemandeUser) }}" type="text" placeholder="Nom..." required>#}
@@ -39,7 +39,7 @@
 					<p>Commentaire</P>
 				</div>
 				<div class="contact-infosc">
-					<textarea class="textarea-commentaire" name="{{ field_name(form.descriptionDemande) }}" id="commentaire" name="commentaire" placeholder="Votre raison de contact ici..." required></textarea>
+					<textarea class="textarea-commentaire" name="{{ field_name(form.description) }}" id="commentaire" name="commentaire" placeholder="Votre raison de contact ici..." required></textarea>
 				</div>
 				<div class="contact-bouton">
 					<button class="submit-button" type="submit">Submit</button>
